==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.

Bug fixes:
- Fix deal bug: showing twice as many items added.
- Make "Compiles portals now?" prompt case-insensitive.
- Prevent the character select screen from appearing randomly due to
  lag or unparsed packets.
- Storage log not created when relogAfterStorage is active.
- Bot should no longer fail to pick up items dropped by monsters that
  died a distance away.
- Tk map viewer has been fixed.
- Make itemsTakeAuto_party count dmgFromYou too. (Hack to allow
  looting monsters that you killed without ever using attack ai_seq.)
- inInventory was not working at all since its last update.
- Bot should no longer wait 3 seconds needlessly when starting an NPC
  conversation. http://openkore.sourceforge.net/forum/viewtopic.php?t=4743
- Don't say "Done talking with <NPC>." until after "<NPC> : Done talking".
- Undo above change because NPCs don't always say "Done talking".
- Fix where command.
- Fix detection of lower headgear in packet 01DA, 01D9, 01D8.
- Correctly detect a player's sitting status when you walk onto their
  screen (packet 01D8, "Player Exists"). It was previously detecting
  every non-dead player as sitting.
- Kore was not displaying left hand damage when right hand missed.
- Kore should recognize when someone is made to stand up by an
  attack, taking into account that Endure/miss doesn't count.
- Fixed a crash caused by autoresponse.
- Fixed dealAuto not working while dead.
- Add the missing "timeout" chat command.
- Fix equipAuto trying to equip unidentified items.
- Fix crash with Actor::You when creating a new character in the bot.

New features:
- Better support for detecting dead players.
- Show player number with emoticons and public chat.
- Show distance with emoticons.
- The uneq command now supports item names.